[package]
name = "repl_deploy"
version = "0.1.1"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

[dependencies]
rsa = "0.9.6"
serde_json = "1.0.113"
clap = "2.34.0"
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
warp = "0.3"
serde = { version = "1.0.196", features = ["derive"]  }
regex = "1.10.3"
base64 = "0.21.7"
sha2 = "0.10.8"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[dev-dependencies]
rand = "0.8.5"