[package]
name = "repl_deploy"
version = "0.1.4"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

[dependencies]
rsa = "0.9.6"
serde_json = "1.0.114"
clap = "2.34.0"
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
warp = "0.3"
serde = { version = "1.0.197", features = ["derive"]  }
regex = "1.10.3"
base64 = "0.22.0"
sha2 = "0.10.8"
log = "0.4.21"
pretty_env_logger = "0.5.0"

[dev-dependencies]
rand = "0.8.5"